# PyPulga

./: .gitignore  Cargo.toml  README.md  changelog.md  pyproject.toml  setup.py  target.md
PulgaPy/: README.md  __init__.py
PulgaPy/math_ops/: Cargo.toml
PulgaPy/string_utils/: Cargo.toml  __init__.py
PulgaPy/string_utils/examples/: example.py
container_one/: Cargo.toml  __init__.py
container_one/examples/: example.py
container_one/src/: lib.rs
container_two/: Cargo.toml  __init__.py
container_two/examples/: example.py
container_two/src/: lib.rs
math_ops/: __init__.py  math_ops.cp311-win_amd64.pyd
math_ops/docs/: index.md
math_ops/examples/: example.py
math_ops/src/: lib.rs
string_utils/: string_utils.cp311-win_amd64.pyd
string_utils/docs/: index.md
string_utils/examples/: example.py
string_utils/src/: lib.rs
